force-app/main/default/objects/Fleet__c/fields/Internal_No__c.field-meta.xml
<CustomField>
    <fullName>Internal_No__c</fullName>
    <label>Internal No.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>