force-app/main/default/objects/Fleet__c/fields/KM__c.field-meta.xml
<CustomField>
    <fullName>KM__c</fullName>
    <label>KM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>