force-app/main/default/objects/Fleet__c/fields/Max_KM__c.field-meta.xml
<CustomField>
    <fullName>Max_KM__c</fullName>
    <label>Max KM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>