force-app/main/default/objects/Fleet__c/fields/Valuta_Danish__c.field-meta.xml
<CustomField>
    <fullName>Valuta_Danish__c</fullName>
    <formula>CONTAINS( Registration__c , &quot; &quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valuta/Danish</label>
    <type>Checkbox</type>
</CustomField>