force-app/main/default/objects/Fleet__c/fields/Veh_Group__c.field-meta.xml
<CustomField>
    <fullName>Veh_Group__c</fullName>
    <label>Veh. Group</label>
    <length>64</length>
    <type>Text</type>
</CustomField>