force-app/main/default/objects/Fleet__c/fields/Vehicle_Status__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Status__c</fullName>
    <label>Vehicle Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>